fix: added animation on library videos, fix header alignment

--- a/src/client/components/Form/Select/styles.scss
+++ b/src/client/components/Form/Select/styles.scss
@@ -12,7 +12,7 @@
   div {
     fill: #242b49;
     color: $color-white;
-    background-color: $color-dark-five;
+    // background-color: $color-dark-five;
   }
 
   > div > div > span {
